refactor: Show video only on click

--- a/src/_includes/partials/home_hero.liquid
+++ b/src/_includes/partials/home_hero.liquid
@@ -3,11 +3,12 @@
     class="container max-w-7xl flex flex-row-reverse md:grid gap-4 sm:gap-6 md:gap-10 md:grid-cols-3 items-start md:items-center"
   >
     <div class="flex justify-center w-20 sm:w-28 md:w-auto flex-shrink-0">
-      <img
+      <amp-img
         src="/assets/images/hompage-hero.webp"
         alt="Placeholder TODO: change image"
         width="410"
         height="640"
+        layout="responsive"
       />
     </div>
     <div class="md:col-span-2">
