--- a/src/index.liquid
+++ b/src/index.liquid
@@ -5,13 +5,13 @@ layout: /layouts/content.liquid
 {% include "partials/home_hero.liquid" %}
 
 <main id="intro">
-  {% include 'partials/introduction.liquid' %}
-
-  {% include 'partials/moderne_verwaltung.liquid' %}
+  {% include 'partials/introduction.liquid' %} {% include
+  'partials/moderne_verwaltung.liquid' %}
   <br />
   {% include 'partials/service-design.liquid' %}
 </main>
 
-{% include 'partials/ersten_modul.liquid' %}
+{% include 'partials/ersten_modul.liquid' %} {% include
+'partials/in_practice.liquid' %}
 
-{% include 'partials/in_practice.liquid' %}
+<script src="/assets/js/home.js"></script>
