refactor: Add meta tag for color theme

--- a/src/_includes/partials/meta.liquid
+++ b/src/_includes/partials/meta.liquid
@@ -11,6 +11,7 @@
 <meta itemprop="name" content="{{ metaTitle }}">
 <meta itemprop="description" content="{{ metaDescription }}">
 <meta itemprop="image" content="{{ site.url }}{{ site.socialMediaImagePath }}">
+<meta name="theme-color" content="#f64c72"/>
 
 {%- comment -%} Open Graph {%- endcomment -%}
 <meta property="og:url" content="{{ metaUrl }}">
