--- a/src/_includes/partials/in_practice.liquid
+++ b/src/_includes/partials/in_practice.liquid
@@ -5,7 +5,7 @@
     {% include 'partials/heading.liquid' content: 'In der Praxis: Die
     Pilot-Schulung 2021' class: 'pb-3 sm:pb-5 text-magenta-500 max-w-prose' %}
     <p class="max-w-prose">
-      Die Weiterbildung xxx ist ein vom CityLab durchgeführtes Pilotprojekt. 16
+      Die Weiterbildung <span class="italic">Service:Agentinnen</span> ist ein vom CityLab durchgeführtes Pilotprojekt. 16
       Mitarbeiter:innen der Berliner Senats- und Bezirksverwaltung haben an
       realen Verwaltungsprozessen die Prinzipien und Werkzeuge der
       nutzerzentrierten Prozessgestaltung erlernt.
