update content on homepage

--- a/src/_includes/partials/ersten_modul.liquid
+++ b/src/_includes/partials/ersten_modul.liquid
@@ -15,8 +15,7 @@
     </h3>
     <div>
       <p class="text-blue-300 max-w-md leading-tight">
-        Hier steht eine Kurzbeschreibung dieses Moduls über mehrere Zeilen. Hier
-        steht eine Kurzbeschreibung dieses Moduls über mehrere Zeilen.
+        Service Design erzeugt gute Angebote, die Stress für Mitarbeiter:innen reduzieren, Geld sparen und Ressourcen freisetzen.
       </p>
     </div>
     <div class="md:relative">
