--- a/src/_includes/partials/in_practice.liquid
+++ b/src/_includes/partials/in_practice.liquid
@@ -8,7 +8,7 @@
       Die Weiterbildung <span class="italic">Service:Agentinnen</span> ist ein vom CityLab durchgeführtes Pilotprojekt. 16
       Mitarbeiter:innen der Berliner Senats- und Bezirksverwaltung haben an
       realen Verwaltungsprozessen die Prinzipien und Werkzeuge der
-      nutzerzentrierten Prozessgestaltung erlernt.
+      nutzer:innenzentrierten Prozessgestaltung erlernt.
     </p>
   </div>
   <img
