--- a/src/_includes/partials/moderne_verwaltung.liquid
+++ b/src/_includes/partials/moderne_verwaltung.liquid
@@ -9,10 +9,10 @@
     nutzer:innen-orientierte Prozesse sind wesentlich für den anstehenden Wandel
     in allen Bereichen des öffentlichen Lebens. In Zeiten der Digitalisierung
     sind sie unabdingbar. ' %} {% include 'partials/herausforderung.liquid'
-    title: 'BürgerInnen erleben Nutzerzentrierung als Standard' content: '
-    Verwaltung steckt bei diesen Ansprüchen in einem Dilemma: BürgerInnen
-    erleben Nutzerzentriertheit als Standard in ihrem privaten Konsum und
-    erwarten dies zunehmend auch von Verwaltung. Mit dem OZG hat die Erfüllung
+    title: 'Bürger:innen erleben Nutzer:innen&shy;zentrierung als Standard' content: '
+    Die Verwaltung steckt bei diesen Ansprüchen in einem Dilemma. Bürger:innen
+    erleben Nutzer:innen&shy;zentriert&shy;heit als Standard in ihrem privaten Konsum und
+    erwarten dies zunehmend auch von Verwaltung. Mit dem OZG (Online&shy;zugangs&shy;gesetz) hat die Erfüllung
     dieser Anforderungen zudem eine klare Deadline. ' %} {% include
     'partials/herausforderung.liquid' title: 'Es fehlt an Know-How und
     Methodenwissen' content: ' Führungskräfte stehen unter dem Druck der
