--- a/src/_includes/partials/service-design.liquid
+++ b/src/_includes/partials/service-design.liquid
@@ -20,12 +20,12 @@
       </div>
       <p class="mb-2 sm:mb-3 md:mb-4">
         Service Design arbeitet auf Grundlage des
-        Nutzer&shy;Innen&shy;erlebnisses - denn niemand kann besser Auskunft
+        Nutzer:innen&shy;erlebnisses - denn niemand kann besser Auskunft
         geben als die Personen, die einen Service von Anfang bis Ende mit echten
-        Bedürfnissen oder auch Handicaps durchlaufen. Dies ist für keine
-        Institution wichtiger als für Verwaltung. Sie hat die größte und
+        Bedürfnissen oder auch Handicaps durchlaufen. <span class="font-bold">Dies ist für keine
+        Institution wichtiger als für die Verwaltung. Sie hat die größte und
         vielfältigste Zielgruppe, die zudem darauf angewiesen ist, die
-        angebotenen Dienstleistungen zu nutzen.
+        angebotenen Dienstleistungen zu nutzen.</span>
         <br />
         <br />
         Service Design ist eine junge, oft noch unbekannte Designdisziplin. Wie
@@ -61,7 +61,7 @@
         <p>
           Die Weiterbildung basiert auf dem Train-the-Trainer-Ansatz und
           befähigt dazu, die Werkzeuge nutzen und auch an Mitarbeiter:innen
-          vermitteln zu können um Nutzerzentriertheit in die Behördenarbeit
+          vermitteln zu können um Nutzer:innen&shy;zentriertheit in die Behördenarbeit
           einzuführen.
         </p>
         <p>
