correct gendering for module 1

--- a/src/_includes/partials/ersten_modul.liquid
+++ b/src/_includes/partials/ersten_modul.liquid
@@ -2,16 +2,16 @@
   {% include 'partials/heading.liquid' content: 'Gleich loslegen mit dem ersten
   Modul' class: 'pr-[28%] md:pr-0 text-magenta-500' %}
   <a
-    href="/module/service-design-und-nutzerorientierung/"
+    href="/module/service-design-und-nutzer:innenorientierung/"
     class="flex gap-2 flex-col md:grid md:grid-cols-[auto,1fr,7fr,2fr] md:gap-8 bg-blue-50 bg-opacity-50 pl-8 pr-[28%] md:pr-0 pt-8 md:pt-5 pb-6 my-6 md:my-10 md:items-center relative"
-    aria-label="Zum ersten Modul Service Design und Nutzerorientierung navigieren"
+    aria-label="Zum ersten Modul Service Design und Nutzer:innenorientierung navigieren"
   >
     <span
       class="text-5xl md:text-7xl -mt-4 text-magenta-500 leading-10 font-semibold mb-2 md:mb-0"
       >01</span
     >
     <h3 class="text-xl md:text-2xl leading-tight -mt-1">
-      Service Design und Nutzerorientierung
+      Service Design und Nutzer:innenorientierung
     </h3>
     <div>
       <p class="text-blue-300 max-w-md leading-tight">
@@ -21,7 +21,7 @@
     <div class="md:relative">
       <img
         src="/assets/images/modules/01_hero.png"
-        alt="Abstrakte Illustration zum Modul 1: Service Design und Nutzerorientierung"
+        alt="Abstrakte Illustration zum Modul 1: Service Design und Nutzer:innenorientierung"
         class="w-1/4 md:w-full h-auto absolute right-0 top-0 md:top-1/2 -translate-y-1/2"
       />
     </div>
