--- a/src/_includes/partials/ersten_modul.liquid
+++ b/src/_includes/partials/ersten_modul.liquid
@@ -11,7 +11,7 @@
       >01</span
     >
     <h3 class="text-xl md:text-2xl leading-tight -mt-1">
-      Service Design und Nutzer:innenorientierung
+      Service Design und Nutzer:innen&shy;orientierung
     </h3>
     <div>
       <p class="text-blue-300 max-w-md leading-tight">
