--- a/src/modules/index.liquid
+++ b/src/modules/index.liquid
@@ -33,7 +33,7 @@ layout: layouts/content.liquid
   class="container max-w-7xl pb-24 px-4 grid grid-cols-1 lg:grid-cols-2 gap-8 md:gap-0 lg:gap-8 xl:gap-16 -translate-y-12 md:-translate-y-20"
   aria-label="Liste aller Module"
 >
-  {% for module in collections.module %}
+  {% for module in collections.sortedModules %}
   <li class="mb-0 md:mb-24 even:translate-y-0 lg:even:translate-y-40">
     {% include 'partials/module_card.liquid' number: module.fileSlug href:
     module.url title: module.data.title abstract: module.data.abstract number:
