--- a/src/_includes/partials/home_hero.liquid
+++ b/src/_includes/partials/home_hero.liquid
@@ -5,7 +5,7 @@
     <div
       class="flex justify-self-center w-20 sm:w-28 md:w-60 lg:w-64 flex-shrink-0"
     >
-      {% include 'partials/module_illustration.liquid' module_number: "01" has_outline: true %}
+      {% include 'partials/module_illustration.liquid' module_number: "01" has_outline: true image_alt: "Menschen, die sich an den Händen fassen und Objekte austauschen" %}
     </div>
     <div class="md:col-span-2">
       <h1
