--- a/src/_includes/partials/module_card.liquid
+++ b/src/_includes/partials/module_card.liquid
@@ -22,7 +22,7 @@
         class="text-xl md:text-lg xl:text-2xl md:leading-relaxed lg:leading-normal text-blue-500"
       >
         <span
-          class="text-[40px] md:text-[44px] xl:text-[64px] md:leading-3 lg:leading-none font-bold text-magenta-500"
+          class="text-[40px] md:text-[44px] xl:text-[60px] leading-[0.5] md:leading-[0.7] lg:leading-[0.6] xl:leading-[0.5] font-bold text-magenta-500"
         >
           {% if number < 10 %}0{% endif %}{{ number }}</span
         ><br />
