--- a/src/_includes/layouts/module.liquid
+++ b/src/_includes/layouts/module.liquid
@@ -5,5 +5,6 @@ layout: layouts/content.liquid
 {% include 'partials/module_hero.liquid' %} {% include
 'partials/module_intro_hypotheses.liquid' %} {% include
 'partials/module_intro_text.liquid' %} {% include 'partials/example.liquid' %}
-{% include 'partials/methods.liquid' %} {% if further_reading %} {% include
+{% if methods %} {% include 'partials/methods.liquid' %} {% endif %}
+{% if further_reading %} {% include
 'partials/links_list.liquid' %} {% endif %}
