use <i> tags to italicize instead of <span>

--- a/src/_includes/partials/home_hero.liquid
+++ b/src/_includes/partials/home_hero.liquid
@@ -22,7 +22,7 @@
       <p class="mt-4 text-white text-base md:text-lg xl:text-xl max-w-xl">
         Digitale, agile und nutzer:innen-orientierte Prozesse sind wesentlich
         für den anstehenden Wandel in allen Bereichen des öffentlichen Lebens.
-        Mit der Weiterbildung <span class="italic">ServiceAgent:innen</span> geben wir auf diese Herausforderung eine
+        Mit der Weiterbildung <i>ServiceAgent:innen</i> geben wir auf diese Herausforderung eine
         konkrete und umsetzbare Antwort. Lassen Sie sich inspirieren.
       </p>
       <div class="mt-8 w-max grid grid-cols-1 gap-3">
