--- a/src/_includes/partials/service-design.liquid
+++ b/src/_includes/partials/service-design.liquid
@@ -54,7 +54,7 @@
     <div class="bg-blue-50 bg-opacity-50 p-8">
       <div class="prose">
         <p>
-          <span class="italic">Service:Agentinnen</span> setzt bei diesem Dilemma an und führt Führungskräfte wie auch
+          <i>Service:Agentinnen</i> setzt bei diesem Dilemma an und führt Führungskräfte wie auch
           Verwaltungs&shy;mit&shy;arbeiter&shy;:innen in die Methode
           Service-Design ein.
         </p>
