--- a/src/_includes/partials/citylab_logo_monochrome.liquid
+++ b/src/_includes/partials/citylab_logo_monochrome.liquid
@@ -3,6 +3,7 @@
   width="134"
   height="27"
   viewBox="0 0 134 27"
+  aria-label="Monochrom Logo vom CityLAB Berlin"
 >
   <g fill="#FFF">
     <path
