--- a/src/_includes/partials/herausforderung.liquid
+++ b/src/_includes/partials/herausforderung.liquid
@@ -4,6 +4,7 @@
 </h3>
 {{ content }}
 {% endcapture %}
-<li>
+
+<li aria-label="Herausforderung: “{{ title }}”">
   {% include 'partials/angle_block.liquid' tag: 'li' content: herausforderung %}
 </li>
