--- a/src/_includes/partials/moderne_verwaltung.liquid
+++ b/src/_includes/partials/moderne_verwaltung.liquid
@@ -1,19 +1,24 @@
-<div class="container max-w-7xl px-4 py-6 sm:py-8 md:py-16">
+<div
+  class="container max-w-7xl px-4 py-6 sm:py-8 md:py-16"
+  aria-label="Abschnitt über die Herausforderungen für eine moderne Verwaltung"
+>
   {% include 'partials/heading.liquid' content: 'Herausforderungen für eine
   moderne Verwaltung' class: 'pb-3 sm:pb-5 md:pb-8 text-magenta-500' %}
   <ul
     class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 md:gap-8 lg:gap-12"
+    aria-label="Liste der Herausforderungen"
   >
     {% include 'partials/herausforderung.liquid' title: 'Transformation in allen
     Bereichen des öffentlichen Lebens' content: ' Digitale, agile und
     nutzer:innen-orientierte Prozesse sind wesentlich für den anstehenden Wandel
     in allen Bereichen des öffentlichen Lebens. In Zeiten der Digitalisierung
     sind sie unabdingbar. ' %} {% include 'partials/herausforderung.liquid'
-    title: 'Bürger:innen erleben Nutzer:innen&shy;zentrierung als Standard' content: '
-    Die Verwaltung steckt bei diesen Ansprüchen in einem Dilemma. Bürger:innen
-    erleben Nutzer:innen&shy;zentriert&shy;heit als Standard in ihrem privaten Konsum und
-    erwarten dies zunehmend auch von Verwaltung. Mit dem OZG (Online&shy;zugangs&shy;gesetz) hat die Erfüllung
-    dieser Anforderungen zudem eine klare Deadline. ' %} {% include
+    title: 'Bürger:innen erleben Nutzer:innen&shy;zentrierung als Standard'
+    content: ' Die Verwaltung steckt bei diesen Ansprüchen in einem Dilemma.
+    Bürger:innen erleben Nutzer:innen&shy;zentriert&shy;heit als Standard in
+    ihrem privaten Konsum und erwarten dies zunehmend auch von Verwaltung. Mit
+    dem OZG (Online&shy;zugangs&shy;gesetz) hat die Erfüllung dieser
+    Anforderungen zudem eine klare Deadline. ' %} {% include
     'partials/herausforderung.liquid' title: 'Es fehlt an Know-How und
     Methodenwissen' content: ' Führungskräfte stehen unter dem Druck der
     Umsetzung, ohne das entsprechende Know-How bereitstellen zu können. Die
