--- a/src/_includes/partials/module_intro_hypotheses.liquid
+++ b/src/_includes/partials/module_intro_hypotheses.liquid
@@ -2,7 +2,7 @@
 <div
   class="container max-w-7xl px-4 py-2 sm:py-6 md:py-6 grid sm:grid-cols-2 gap-4 sm:gap-8 md:gap-16"
 >
-  <ul>
+  <ul aria-label="Liste der Hypothesen für dieses Modul">
     {% for link in hypotheses %}
     <li
       class="py-2 grid grid-cols-[auto,1fr] gap-4 items-start"
