--- a/src/index.liquid
+++ b/src/index.liquid
@@ -4,7 +4,7 @@ layout: /layouts/content.liquid
 
 {% include "partials/home_hero.liquid" %}
 
-<main id="intro">
+<main id="intro" aria-label="Hauptinhalte der Hauptseite">
   {% include 'partials/introduction.liquid' %} {% include
   'partials/moderne_verwaltung.liquid' %}
   <br />
