--- a/src/_includes/partials/berlin_logo_color.liquid
+++ b/src/_includes/partials/berlin_logo_color.liquid
@@ -3,6 +3,7 @@
   width="93"
   height="62"
   viewBox="0 0 93 62"
+  aria-label="Frabigen Logo der regierende Bürgermeisterin von Berlin - Senatskanzlei"
 >
   <g fill="none">
     <rect width="92" height="61" x="1" y="1" fill="#FFF" />
