--- a/src/_includes/partials/header.liquid
+++ b/src/_includes/partials/header.liquid
@@ -1,7 +1,11 @@
 <header
   class="sticky z-10 top-0 w-full bg-blue-500 text-white border-b border-blue-300 pt-3 pb-4"
+  aria-label="Kopfbereich mit der Logo und der Navigation"
 >
-  <section class="px-4 container max-w-7xl flex justify-between items-center">
+  <section
+    class="px-4 container max-w-7xl flex justify-between items-center"
+    aria-label="Inhalte des Kopfbereichs"
+  >
     <a
       href="/"
       aria-label="Hauptseite der Webseite"
@@ -9,15 +13,15 @@
     >
       {% include 'partials/logo.liquid' %}
     </a>
-    <nav class="flex items-center gap-8">
-      <ul>
-        <li class="inline-flex gap-6">
+    <nav class="flex items-center gap-8" aria-label="Hauptmenü von der Website">
+      <ul aria-label="Liste der Hauptmenü Links">
+        <li class="inline-flex gap-6" aria-label="Link im Hauptmenü">
           <a
             href="/module"
             class="text-blue-100 font-bold md:text-lg opacity-100 transition-opacity hover:opacity-80"
             aria-label="Übersichtseite aller 8 Module zur agilen Behördenarbeit"
           >
-            <span class="sm:inline hidden">→</span> Module
+            <span class="sm:inline hidden" aria-hidden="true">→</span> Module
           </a>
         </li>
       </ul>
