--- a/src/_includes/partials/logo.liquid
+++ b/src/_includes/partials/logo.liquid
@@ -3,6 +3,7 @@
   width="236"
   height="30"
   viewBox="0 0 236 30"
+  aria-label="Logo der Webseite ServiceAgent:innen"
 >
   <g fill="none" fill-rule="evenodd">
     <g fill-rule="nonzero" transform="translate(0 1)">
