--- a/src/_includes/partials/module_hero.liquid
+++ b/src/_includes/partials/module_hero.liquid
@@ -1,14 +1,18 @@
 <section
   class="bg-blue-500 py-6 sm:py-8 md:py-12 text-white mb-8 sm:mb-12 md:mb-16"
+  aria-label="Einführungsabschnitt über der aktuellen Modul"
 >
   <div
     class="container max-w-7xl px-4 grid grid-cols-[2fr,1fr] md:grid-cols-[1fr,auto] gap-4 sm:gap-6 md:gap-8"
   >
-    <aside class="grid grid-cols-1 grid-rows-[auto,1fr]">
-      <a href="/module" class="sm:text-lg xl:text-xl group" Alle Module
-        >←
-        <span class="opacity-70 group-hover:opacity-100">Alle Module</span></a
-      >
+    <aside
+      class="grid grid-cols-1 grid-rows-[auto,1fr]"
+      aria-label="Text Inhalte des Einführungsabschnitts"
+    >
+      <a href="/module" class="sm:text-lg xl:text-xl group">
+        ←
+        <span class="opacity-70 group-hover:opacity-100">Alle Module</span>
+      </a>
       <h1 class="flex flex-col justify-center gap-2 sml:gap-3 md:gap-4 py-4">
         <span
           class="text-5xl md:text-7xl -mt-4 text-magenta-500 leading-10 font-semibold mb-2 md:mb-0"
