--- a/src/_includes/partials/module_intro_text.liquid
+++ b/src/_includes/partials/module_intro_text.liquid
@@ -1,7 +1,8 @@
 <div class="container max-w-7xl px-4 py-2 sm:py-8 md:py-8">
-  <div
+  <article
     class="lg:columns-2 gap-4 sm:gap-8 md:gap-16 sm:text-lg xl:text-xl prose max-w-none text-blue-500"
+    aria-label="Text Inhalt des Moduls"
   >
     {{ content }}
-  </div>
+  </article>
 </div>
