--- a/src/_includes/partials/service-design.liquid
+++ b/src/_includes/partials/service-design.liquid
@@ -1,6 +1,10 @@
-<div class="container max-w-7xl sm:px-4 py-6 sm:py-8 md:py-16">
+<section
+  class="container max-w-7xl sm:px-4 py-6 sm:py-8 md:py-16"
+  aria-label="Abschnitt über Service Design als Lösungsansatz"
+>
   <div
     class="bg-blue-500 relative text-white px-8 p-4 pt-8 md:p-8 pb-24 bg-right-bottom bg-no-repeat sm:text-lg md:text-xl bg-[url(/assets/images/buildings.webp)] bg-[length:100px_auto] lg:bg-auto"
+    aria-label="Einführung in Service Design"
   >
     <header
       class="flex flex-col-reverse gap-6 sm:flex-row justify-between sm:items-center mb-4 sm:mb-6 md:mb-8"
@@ -16,18 +20,20 @@
           width="236"
           height="371"
           src="/assets/images/service-design.webp"
-          alt="Abstract illustration of a woman interacting with a digital screen with other indiviuals"
+          aria-label="Abstract illustration of a woman interacting with a digital screen with other indiviuals"
           class="object-contain box-content max-h-full max-w-full pr-8 pb-8 float-left lg:float-none absolute sm:static top-8 right-4 origin-top-right scale-[0.2] sm:scale-100"
         />
       </div>
       <p class="mb-2 sm:mb-3 md:mb-4">
-        Service Design arbeitet auf Grundlage des
-        Nutzer:innen&shy;erlebnisses - denn niemand kann besser Auskunft
-        geben als die Personen, die einen Service von Anfang bis Ende mit echten
-        Bedürfnissen oder auch Handicaps durchlaufen. <span class="font-bold">Dies ist für keine
-        Institution wichtiger als für die Verwaltung. Sie hat die größte und
-        vielfältigste Zielgruppe, die zudem darauf angewiesen ist, die
-        angebotenen Dienstleistungen zu nutzen.</span>
+        Service Design arbeitet auf Grundlage des Nutzer:innen&shy;erlebnisses -
+        denn niemand kann besser Auskunft geben als die Personen, die einen
+        Service von Anfang bis Ende mit echten Bedürfnissen oder auch Handicaps
+        durchlaufen.
+        <span class="font-bold"
+          >Dies ist für keine Institution wichtiger als für die Verwaltung. Sie
+          hat die größte und vielfältigste Zielgruppe, die zudem darauf
+          angewiesen ist, die angebotenen Dienstleistungen zu nutzen.</span
+        >
         <br />
         <br />
         Service Design ist eine junge, oft noch unbekannte Designdisziplin. Wie
@@ -41,7 +47,10 @@
       </p>
     </div>
   </div>
-  <details class="border-t border-blue-300 group">
+  <details
+    class="border-t border-blue-300 group"
+    aria-label="Details über die Umsetzung der Weiterbildung"
+  >
     <summary
       class="bg-blue-500 text-white px-8 py-3 sm:py-4 md:py-5 sm:text-xl md:text-2xl list-none flex justify-between items-center"
     >
@@ -56,15 +65,15 @@
     <div class="bg-blue-50 bg-opacity-50 p-8">
       <div class="prose">
         <p>
-          <i>Service:Agentinnen</i> setzt bei diesem Dilemma an und führt Führungskräfte wie auch
-          Verwaltungs&shy;mit&shy;arbeiter&shy;:innen in die Methode
-          Service-Design ein.
+          <i>Service:Agentinnen</i> setzt bei diesem Dilemma an und führt
+          Führungskräfte wie auch Verwaltungs&shy;mit&shy;arbeiter&shy;:innen in
+          die Methode Service-Design ein.
         </p>
         <p>
           Die Weiterbildung basiert auf dem Train-the-Trainer-Ansatz und
           befähigt dazu, die Werkzeuge nutzen und auch an Mitarbeiter:innen
-          vermitteln zu können um Nutzer:innen&shy;zentriertheit in die Behördenarbeit
-          einzuführen.
+          vermitteln zu können um Nutzer:innen&shy;zentriertheit in die
+          Behördenarbeit einzuführen.
         </p>
         <p>
           Jedes Modul beinhaltete einen erläuternden Überbau, angewandte
@@ -73,4 +82,4 @@
       </div>
     </div>
   </details>
-</div>
+</section>
