--- a/src/_includes/partials/support_cta.liquid
+++ b/src/_includes/partials/support_cta.liquid
@@ -1,5 +1,6 @@
 <section
   class="bg-magenta-500 text-white mt-8 sm:mt-12 md:mt-16 flex flex-col relative"
+  aria-label="Aufruf zum Unterstützungsbedarf"
 >
   <div
     class="container max-w-7xl p-4 py-8 sm:p-8 md:p-12 grid grid-cols-1 md:grid-cols-[1fr,2fr] lg:grid-cols-[2fr,3fr,1fr] gap-8 sm:gap-12 md:gap-16"
@@ -57,7 +58,7 @@
       <button
         id="back-to-top-link"
         class="absolute -top-4 right-4 -translate-y-full transition hover:bg-blue-500 bg-magenta-500 text-white w-12 h-12 flex items-center justify-center"
-        aria-label="Zurück zum Seitenanfang hochscrollen"
+        aria-label="Zurück zum Seitenanfang “hochscrollen”"
       >
         {% include 'partials/arrow_icon.liquid' class: '-rotate-180' %}
       </button>
