refactor: Add some visible focus rings to the focusable elemetns

--- a/src/_includes/partials/ersten_modul.liquid
+++ b/src/_includes/partials/ersten_modul.liquid
@@ -34,7 +34,7 @@
   </a>
   <a
     href="/module"
-    class="px-3 pt-1 pb-1 md:pb-2 bg-magenta-500 text-white text-base md:text-lg xl:text-xl text-center transition-colors hover:bg-magenta-400 focus:ring-white"
+    class="px-3 pt-1 pb-1 md:pb-2 bg-magenta-500 text-white text-base md:text-lg xl:text-xl text-center transition-colors hover:bg-magenta-400 focus:ring-blue-500"
     aria-label="Zur Übersicht der Modul-Seiten navigieren"
     >Alle Module</a
   >
