--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -44,7 +44,12 @@
     @apply antialiased text-blue-500;
   }
 
-  a {
+  a,
+  button {
     @apply focus:outline-none focus:ring focus:ring-magenta-500 focus:ring-offset-0;
+  }
+
+  summary:focus {
+    @apply relative z-20 outline-none ring ring-magenta-500 ring-offset-0;
   }
 }
