--- a/src/_includes/partials/support_cta.liquid
+++ b/src/_includes/partials/support_cta.liquid
@@ -50,14 +50,14 @@
       </p>
       <a
         href="mailto:info@citylab-berlin.org"
-        class="px-3 pt-1 pb-1 md:pb-2 bg-white text-blue-500 text-base md:text-lg lg:text-xl text-center transition-colors hover:text-magenta-500"
+        class="px-3 pt-1 pb-1 md:pb-2 bg-white text-blue-500 text-base md:text-lg lg:text-xl text-center transition-colors hover:text-magenta-500 focus:ring-blue-500"
         aria-label="Kontakltieren Sie uns per E-Mail an info@citylab-berlin.org"
       >
         info@citylab-berlin.org
       </a>
       <button
         id="back-to-top-link"
-        class="absolute -top-4 right-4 -translate-y-full transition hover:bg-blue-500 bg-magenta-500 text-white w-12 h-12 flex items-center justify-center"
+        class="absolute -top-4 right-4 -translate-y-full transition hover:bg-blue-500 bg-magenta-500 text-white w-12 h-12 flex items-center justify-center focus:ring-blue-500"
         aria-label="Zurück zum Seitenanfang “hochscrollen”"
       >
         {% include 'partials/arrow_icon.liquid' class: '-rotate-180' %}
