--- a/src/_includes/partials/citylab_logo_color.liquid
+++ b/src/_includes/partials/citylab_logo_color.liquid
@@ -3,7 +3,7 @@
   width="165"
   height="33"
   viewBox="0 0 165 33"
-  aria-label="Frabigen Logo vom CityLAB Berlin"
+  aria-label="Farbiges Logo vom CityLAB Berlin"
 >
   <path
     fill="#2F2FA2"
