--- a/src/_includes/partials/footer.liquid
+++ b/src/_includes/partials/footer.liquid
@@ -8,12 +8,12 @@
   >
     <nav
       class="flex flex-col sm:flex-row sm:items-center gap-8 sm:gap-16 sm:justify-between"
-      aria-label="Logos der Autoren und Partner"
+      aria-label="Logos der Autor:innen und Partner:innen"
     >
       <a
         href="https://citylab-berlin.org"
         class="opacity-100 transition-opacity hover:opacity-80"
-        aria-label="Logo vom Projekt CityLab Berlin"
+        aria-label="Logo vom Projekt CityLAB Berlin"
       >
         {% include 'partials/citylab_logo_color.liquid' %}
       </a>
@@ -59,16 +59,16 @@
     </p>
     <nav
       class="container mt-0 px-4 flex justify-between flex-wrap"
-      aria-label="Credits und legale Links"
+      aria-label="Credits und rechtliche Links"
     >
       <span aria-label="Credits">© 2022 Technologiestiftung Berlin</span>
       <ul
         class="block sm:flex gap-2 sm:gap-4 flex-wrap"
-        aria-label="Liste der legale Links"
+        aria-label="Liste der rechtlichen Links"
       >
         <li>
           <a
-            targe="_blank"
+            target="_blank"
             rel="noopener noreferrer"
             href="mailto:info@citylab-berlin.org"
             >Kontakt</a
@@ -76,7 +76,7 @@
         </li>
         <li>
           <a
-            targe="_blank"
+            target="_blank"
             rel="noopener noreferrer"
             href="https://github.com/technologiestiftung/service-agentinnen"
             >Quellcode</a
@@ -84,7 +84,7 @@
         </li>
         <li>
           <a
-            targe="_blank"
+            target="_blank"
             rel="noopener noreferrer"
             href="mailto:info@citylab-berlin.org"
             >Probleme der Barrierfreiheit melden</a
@@ -92,7 +92,7 @@
         </li>
         <li>
           <a
-            targe="_blank"
+            target="_blank"
             rel="noopener noreferrer"
             href="https://www.technologiestiftung-berlin.de/datenschutz"
             >Datenschutz</a
@@ -100,7 +100,7 @@
         </li>
         <li>
           <a
-            targe="_blank"
+            target="_blank"
             rel="noopener noreferrer"
             href="https://www.technologiestiftung-berlin.de/impressum"
             >Impressum</a
