--- a/src/_includes/partials/header.liquid
+++ b/src/_includes/partials/header.liquid
@@ -1,6 +1,6 @@
 <header
   class="sticky z-10 top-0 w-full bg-blue-500 text-white border-b border-blue-300 pt-3 pb-4"
-  aria-label="Kopfbereich mit der Logo und der Navigation"
+  aria-label="Kopfbereich mit dem Logo und der Navigation"
 >
   <section
     class="px-4 container max-w-7xl flex justify-between items-center"
@@ -13,7 +13,7 @@
     >
       {% include 'partials/logo.liquid' %}
     </a>
-    <nav class="flex items-center gap-8" aria-label="Hauptmenü von der Website">
+    <nav class="flex items-center gap-8" aria-label="Hauptmenü der Website">
       <ul aria-label="Liste der Hauptmenü Links">
         <li class="inline-flex gap-6" aria-label="Link im Hauptmenü">
           <a
@@ -32,7 +32,7 @@
         <a
           href="https://citylab-berlin.org"
           class="opacity-100 transition-opacity hover:opacity-80"
-          aria-label="Logo vom Projekt Citylab Berlin, der Technologiestiftung Berlin"
+          aria-label="Logo vom Projekt CityLAB Berlin, der Technologiestiftung Berlin"
         >
           {% include 'partials/citylab_logo_monochrome.liquid' %}
         </a>
