--- a/src/_includes/partials/home_hero.liquid
+++ b/src/_includes/partials/home_hero.liquid
@@ -7,7 +7,7 @@
   >
     <div
       class="flex justify-center w-20 sm:w-28 md:w-auto flex-shrink-0"
-      aria-label="Bildbereich der Einführungsabschnitts"
+      aria-label="Bildbereich des Einführungsabschnitts"
     >
       <img
         src="/assets/images/hompage-hero.webp"
@@ -19,7 +19,7 @@
     </div>
     <div
       class="md:col-span-2"
-      aria-label="Textbereich der Einführungsabschnitts"
+      aria-label="Textbereich des Einführungsabschnitts"
     >
       <h1
         class="text-white text-3xl leading-none md:text-4xl lg:text-[40px] font-bold max-w-xl"
