--- a/src/_includes/partials/in_practice.liquid
+++ b/src/_includes/partials/in_practice.liquid
@@ -9,7 +9,7 @@
     {% include 'partials/heading.liquid' content: 'In der Praxis: Die
     Pilot-Schulung 2021' class: 'pb-3 sm:pb-5 text-magenta-500 max-w-prose' %}
     <p class="max-w-prose">
-      Die Weiterbildung <i>Service:Agentinnen</i> ist ein vom CityLab
+      Die Weiterbildung <i>Service:Agentinnen</i> ist ein vom CityLAB
       durchgeführtes Pilotprojekt. 16 Mitarbeiter:innen der Berliner Senats- und
       Bezirksverwaltung haben an realen Verwaltungsprozessen die Prinzipien und
       Werkzeuge der nutzer:innenzentrierten Prozessgestaltung erlernt.
@@ -24,7 +24,7 @@
   />
   <div
     class="col-span-1 md:col-span-12"
-    aria-label="Abschnitt mit Zitate unserer Teilnehmer:innen"
+    aria-label="Abschnitt mit O-Tönen unserer Teilnehmer:innen"
   >
     <h3 class="text-lg sm:text-xl md:text-2xl text-magenta-500">
       O-Töne unserer Teilnehmer:innen
