--- a/src/_includes/partials/introduction.liquid
+++ b/src/_includes/partials/introduction.liquid
@@ -57,7 +57,7 @@
         <polygon fill="#FFF" points="36 25 36 67.007 64.019 46.004" />
       </svg>
     </div>
-    <div class="bg-blue-50 bg-opacity-50 py-3 px-4" aria-label="Video-Unterschrift">
+    <div class="bg-blue-50 bg-opacity-50 py-3 px-4" aria-label="Video-Zusammenfassung">
       <p class="max-w-prose">
         Rückblick auf die erste ServiceAgent:innen-Schulung 2021. (06:01 min)
       </p>
