--- a/src/_includes/partials/module_card.liquid
+++ b/src/_includes/partials/module_card.liquid
@@ -35,7 +35,7 @@
       </h2>
       <p
         class="mt-1 text-blue-300 text-base lg:text-sm xl:text-base"
-        aria-label="Abstrakt des Moduls"
+        aria-label="Kurzbeschreibung des Moduls"
       >
         {{ abstract }}
       </p>
