--- a/src/_includes/partials/methods.liquid
+++ b/src/_includes/partials/methods.liquid
@@ -1,6 +1,6 @@
 <ul
   class="bg-magenta-500 text-white my-8 sm:my-12 md:my-16 flex flex-col"
-  aria-label="List der Arbeitsblätter des Moduls"
+  aria-label="Liste der Arbeitsblätter des Moduls"
 >
   {% for method in methods %}
   <li
