--- a/src/_includes/partials/service-design.liquid
+++ b/src/_includes/partials/service-design.liquid
@@ -20,7 +20,7 @@
           width="236"
           height="371"
           src="/assets/images/service-design.webp"
-          aria-label="Abstract illustration of a woman interacting with a digital screen with other indiviuals"
+          aria-label="Abstrakte Illustration einer Person, die mit einem Screen interagiert"
           class="object-contain box-content max-h-full max-w-full pr-8 pb-8 float-left lg:float-none absolute sm:static top-8 right-4 origin-top-right scale-[0.2] sm:scale-100"
         />
       </div>
