feat(SAMS-55): only show outline for first module (on blue)

--- a/src/_includes/partials/module_card.liquid
+++ b/src/_includes/partials/module_card.liquid
@@ -35,5 +35,5 @@
       </p>
     </div>
   </div>
-  {% include 'partials/module_illustration.liquid' class: 'w-24 md:w-full md:order-first -translate-y-16 md:-translate-y-[28px] lg:-translate-y-[35px]' module_number: module_number has_outline: true image_alt: image_alt %}
+  {% include 'partials/module_illustration.liquid' class: 'w-24 md:w-full md:order-first -translate-y-16 md:-translate-y-[28px] lg:-translate-y-[35px]' module_number: module_number has_outline: is_on_blue image_alt: image_alt %}
 </a>
