--- a/src/_includes/layouts/module.liquid
+++ b/src/_includes/layouts/module.liquid
@@ -4,7 +4,7 @@ layout: layouts/content.liquid
 
 {% include 'partials/module_hero.liquid' %} {% include
 'partials/module_intro_hypotheses.liquid' %} {% include
-'partials/module_intro_text.liquid' %} {% include 'partials/example.liquid' %}
+'partials/module_intro_text.liquid' %} {% include 'partials/example.liquid' module_number: page.fileSlug %}
 {% if methods %} {% include 'partials/methods.liquid' %} {% endif %}
 {% if further_reading %} {% include
 'partials/links_list.liquid' %} {% endif %}
