--- a/src/_includes/partials/in_practice.liquid
+++ b/src/_includes/partials/in_practice.liquid
@@ -13,7 +13,7 @@
   </div>
   {% include 'partials/picture.liquid' directory: 'assets/images/' file_name:
   'schulung' image_alt: 'Ein Laptop, auf dem die Schulung über Zoom stattfindet'
-  width: '800' height: '384' class: 'col-span-1 md:col-start-9
+  width: '800' height: '384' sizes: '400 600 800' class: 'col-span-1 md:col-start-9
   md:col-span-4 w-full aspect-auto' %}
   <div class="col-span-3 md:col-span-12">
     <h3 class="text-lg sm:text-xl md:text-2xl text-magenta-500">
