--- a/src/_includes/partials/service-design.liquid
+++ b/src/_includes/partials/service-design.liquid
@@ -3,7 +3,7 @@
   aria-label="Abschnitt über Service Design als Lösungsansatz"
 >
   <div
-    class="bg-blue-500 relative text-white px-8 p-4 pt-8 md:p-8 pb-24 bg-right-bottom bg-no-repeat sm:text-lg md:text-xl bg-[url(/assets/images/buildings.webp)] bg-[length:100px_auto] lg:bg-auto"
+    class="bg-blue-500 relative text-white px-8 p-4 pt-8 md:p-8 pb-24 bg-right-bottom bg-no-repeat sm:text-lg md:text-xl bg-[url(/assets/images/houses-800.webp)] bg-[length:100px_auto] lg:bg-[length:300px_auto]"
     aria-label="Einführung in Service Design"
   >
     <header
@@ -16,13 +16,7 @@
     </header>
     <div class="lg:grid lg:grid-cols-3 gap-4 md:gap-8 lg:gap-12 clear-left">
       <div class="flex items-center justify-center">
-        <img
-          width="236"
-          height="371"
-          src="/assets/images/service-design.webp"
-          aria-label="Abstrakte Illustration einer Person, die mit einem Screen interagiert"
-          class="object-contain box-content max-h-full max-w-full pr-8 pb-8 float-left lg:float-none absolute sm:static top-8 right-4 origin-top-right scale-[0.2] sm:scale-100"
-        />
+        {% include 'partials/picture.liquid' directory: '/assets/images' file_name: 'screen' sizes: '400 800' image_alt: 'Abstrakte Illustration einer Person, die mit einem Screen interagiert' width: '236' height: '371' class: 'object-contain box-content max-h-full max-w-full pr-8 pb-8 float-left lg:float-none absolute sm:static top-8 right-4 origin-top-right scale-[0.2] sm:scale-100' %}
       </div>
       <p class="mb-2 sm:mb-3 md:mb-4">
         Service Design arbeitet auf Grundlage des Nutzer:innen&shy;erlebnisses -
