feat(SAMS-45/55): add remaining module illustration (03)

--- a/src/_includes/partials/module_illustration_outline.liquid
+++ b/src/_includes/partials/module_illustration_outline.liquid
@@ -27,10 +27,10 @@
   />
   {% endif %}
   {%- comment -%}
-  Modules 04, 06, and 08 have the same
+  Modules 03, 04, 06, and 08 have the same
   outline shape, so we only add the polygon once.
   {%- endcomment -%}
-  {% if module_number == "04" or module_number == "06" or
+  {% if module_number == "03" or module_number == "04" or module_number == "06" or
   module_number == "08" %}
   <polygon
     fill="none"
