--- a/src/_includes/partials/module_card.liquid
+++ b/src/_includes/partials/module_card.liquid
@@ -1,4 +1,5 @@
-{% capture module_number %}{% if number < 10 %}0{% endif %}{{ number }}{% endcapture %}
+{% capture module_number %}{% if number < 10 %}0{% endif %}{{ number }}{%
+endcapture %}
 
 <a
   href="{{ href }}"
@@ -32,7 +33,7 @@
           class="text-[40px] md:text-[44px] xl:text-[56px] leading-[0.5] md:leading-[0.7] lg:leading-[0.6] xl:leading-[0.4] font-bold text-magenta-500"
         >
           {{ module_number }}</span
-        ><br />
+        >
         <span class="block leading-7">{{ title }}</span>
       </h2>
       <p
@@ -43,5 +44,7 @@
       </p>
     </div>
   </div>
-  {% include 'partials/module_illustration.liquid' class: 'w-24 md:w-full md:order-first -translate-y-16 md:-translate-y-[28px] lg:-translate-y-[35px]' module_number: module_number has_outline: is_on_blue image_alt: image_alt %}
+  {% include 'partials/module_illustration.liquid' class: 'w-24 md:w-full
+  md:order-first -translate-y-16 md:-translate-y-[28px] lg:-translate-y-[35px]'
+  module_number: module_number has_outline: is_on_blue image_alt: image_alt %}
 </a>
