feat: add width/height attributes to illustration partial

--- a/src/_includes/partials/module_card.liquid
+++ b/src/_includes/partials/module_card.liquid
@@ -46,5 +46,5 @@ endcapture %}
   </div>
   {% include 'partials/module_illustration.liquid' class: 'w-24 md:w-full
   md:order-first -translate-y-16 md:-translate-y-[28px] lg:-translate-y-[35px]'
-  module_number: module_number has_outline: is_on_blue image_alt: image_alt %}
+  module_number: module_number has_outline: is_on_blue image_alt: image_alt width: '800' height: '1362'  %}
 </a>
