--- a/src/_includes/partials/module_illustration.liquid
+++ b/src/_includes/partials/module_illustration.liquid
@@ -23,6 +23,8 @@
     <img
       src="/assets/images/modules/{{ module_number }}/hero-800.png"
       alt="{{ image_alt }}"
+      width="{{ width }}"
+      height="{{ height }}"
       loading="lazy"
     />
   </picture>
