fix: add some soft hyphens for better line breaks

--- a/src/_includes/partials/in_practice.liquid
+++ b/src/_includes/partials/in_practice.liquid
@@ -8,8 +8,8 @@
     <p class="max-w-prose">
       Die Weiterbildung <i>Service:Agentinnen</i> ist ein vom CityLAB
       durchgeführtes Pilotprojekt. 16 Mitarbeiter:innen der Berliner Senats- und
-      Bezirksverwaltung haben an realen Verwaltungsprozessen die Prinzipien und
-      Werkzeuge der nutzer:innenzentrierten Prozessgestaltung erlernt.
+      Bezirksverwaltung haben an realen Verwaltungs&shy;prozessen die Prinzipien und
+      Werkzeuge der nutzer:innen&shy;zentrierten Prozessgestaltung erlernt.
     </p>
   </div>
   {% include 'partials/picture.liquid' directory: 'assets/images/' file_name:
