fix: hide decorative SVG from ARIA tree

--- a/src/_includes/partials/home_hero.liquid
+++ b/src/_includes/partials/home_hero.liquid
@@ -20,6 +20,7 @@
         height="1261"
         viewBox="0 0 802 1261"
         class="absolute top-0 left-0 w-full h-auto"
+        aria-hidden="true"
       >
         <polygon
           fill="none"
